fix: collapse修改样式&兼容body (#3060)

--- a/scss/components/_collapse-group.scss
+++ b/scss/components/_collapse-group.scss
@@ -1,5 +1,9 @@
 .#{$ns}CollapseGroup {
 
+  .#{$ns}Collapse:not(:last-child) {
+    border-bottom: none;
+  }
+
   &.icon-position-right {
     .#{$ns}Collapse-header {
       .#{$ns}Collapse-arrow {
